# design-intel

./: .env.example  .gitignore  Backlog.md  README.md  pyproject.toml
config/: default.yaml
examples/: excalidraw-critique.md
knowledge/: CORPUS_SOURCES.md  INDEX.yaml
knowledge/accessibility/: contrast-ratios-wcag.md
knowledge/critique/: design-teardowns-sources.md
knowledge/layout/: spacing-systems.md
knowledge/systems/: design-system-documentation.md
knowledge/typography/: type-scale-ratios.md
src/: cli.py  config.py  errors.py
src/agents/: base.py  critique.py  ensemble.py  knowledge_curator.py  knowledge_validator.py  orchestrator.py  spec_writer.py  style_extractor.py  style_generator.py  visual_agent.py
src/analysis/: component_detector.py  interaction_tester.py  wcag_checker.py
src/input/: models.py  processor.py  screenshot.py
src/knowledge/: embeddings.py  index.py  retriever.py  store.py
src/providers/: llm.py
src/templates/: critique_report.md.j2  design_spec.md.j2  style_guide.yaml.j2
tests/: benchmark_critique.py
